introduction references and sequencing methods

--- a/introduction.tex
+++ b/introduction.tex
@@ -22,17 +22,17 @@ A number of algorithms exist that offer predictions as to the deleteriousness of
 
 While the three tools succeed in making good predictions, their reliability is unfortunately still not high enough to serve as a basis of clinical decision making. Song Sun and other members of the Roth Lab recently performed an independent comparison of these tools on a set of well established disease-causing variants as well as rare polymorphisms with no known disease association~\cite{sun_extended_2016}. A high precision (the fraction of correct classifications out of all positive classifications) can be considered especially important when considering taking clinical action based on a prediction. When compared at a minimum precision level of 90\%, PolyPhen-2 and PROVEAN only reach a sensitivity of 19\% and 21\%, respectively (where sensitivity is defined as the fraction of correct classifications out of all real existing disease variants). SIFT was not even capable of achieving 90\% precision at any score threshold.
 
-\section{Laboratory approaches to variant function assessment}
-\label{complY2HIntro}
-
-An alternative to computational prediction for variant assessment is the use of laboratory assays. Many different types of assays exist that can yield potential insight into the effects of missense variants on protein function. However many of them, such as enzymatic activity assays need to be performed one by one and are not easily scalable. Two particularly useful assays in this respect are Yeast-2-Hybrid and functional complementation.
-
 \begin{figure}[h!]
 	\centering
 	\includegraphics[width=\textwidth]{img/compl_y2h.pdf}
 	\caption{Complementation and Yeast-2-Hybrid. A) Complementation: Deletion of gene X in yeast results in a fitness defect, that is rescued by expression of X's human orthologue. A damaging variant of human X results in loss of complementation. B) Yeast-2-Hybrid: Strains carrying fusion of ORF X to Gal4-DB and ORF Y to Gal4-AD are mated. A successful interaction between X and Y in the diploid progeny results in reconstitution of Gal4 and thus in the expression of the HIS3 reporter, allowing for auxotrophy selection.}
 	\label{fig:compl_y2h}
 \end{figure}
+
+\section{Laboratory approaches to variant function assessment}
+\label{complY2HIntro}
+
+An alternative to computational prediction for variant assessment is the use of laboratory assays. Many different types of assays exist that can yield potential insight into the effects of missense variants on protein function. However many of them, such as enzymatic activity assays need to be performed one by one and are not easily scalable. Two particularly useful assays in this respect are Yeast-2-Hybrid and functional complementation.
 
 Yeast-2-Hybrid (Y2H)~\cite{fields_novel_1989} is a binary protein interaction assay performed within the yeast \species{Saccharomyces cerevisiae}. It is based on the reconstitution of two fragments of the transcription factor Gal4. The Gal4 protein comprises two domains: A DNA-binding (DB) domain and an activating domain (AD) both are required for it to successfully associate with its cognate promoter region and induce expression of a reporter gene downstream of the promoter. When two proteins X and Y are fused to the DB and AD domain respectively, an prospective interaction between X and Y leads to the reconstitution of the transcription factor and subsequently to reporter expression. In most cases, the reporter is an auxotrophy marker, such as \gene{HIS3}, thus linking the ability of the two proteins to interact with each other to the ability of the yeast strain to grow on selective media. When comparing different variants of the same protein interacting with the same partner, reporter expression has even been shown to be proportional to binding affinity~\cite{yang_protein-peptide_1995}. This allows for quantitative interpretation of Y2H results under these specific circumstances. 
 
@@ -75,7 +75,7 @@ Complementation and Y2H promise to be useful tools in the classification of vari
 \end{landscape}
 
 
-Deep Mutational Scanning as performed in these existing studies can be broken down into a number of experimental and computational steps: (1) Mutagenesis; (2) Selection of functional variants; (3) Sequencing of the selected and control populations; and (4) Computational analysis.
+Deep Mutational Scanning as performed in these existing studies can be broken down into a number of experimental and computational components: (1) Mutagenesis; (2) Selection of functional variants; (3) Sequencing of the selected and control populations; and (4) Computational analysis.
 
 % \begin{table}
 % 	\centering
@@ -94,11 +94,12 @@ Deep Mutational Scanning as performed in these existing studies can be broken do
 
 \paragraph{Mutagenesis approaches:} There are a number of saturation mutagenesis methods that have previously been applied in DMS studies. The simplest method is error-prone PCR amplification~\cite{firstErrorPronePCR,mohan_pcr_2011}. While this has the advantage of being an inexpensive and facile procedure, it will only result in the generation of point mutations and as such will not generate all possible amino acid replacements. One may argue that the evaluation of VUS does not require insight into mutations outside of this set, however at the expense of potentially valuable biochemical insights. 
 
-Another set of methods often employed are scaled up site-directed mutagenesis approaches~\cite{seyfang_multiple_2004,firnberg_pfunkel_2012,}~\todo{PALS}; with one popular example being Kunkel mutagenesis~\cite{kunkel_rapid_1985}. It uses a special strain of \species{E.~coli} that has been modified to produce high levels of uradine and lacks the ability to excise uracil bases from DNA. A phage vector carrying the desired template sequence is transfected into the cells resulting in its replication with a high uracil incorporation rate. The thus uracilated template can be PCR amplified with primers containing the mutations of interest and subsequently amplified in regular \species{E.~coli} which will degrade the uracilated template, thus enriching the mutant copies. A number of derivatives of Kunkel mutagenesis have since been developed to bring its output to a scale supporting saturated libraries, most notably Pfunkel~\cite{}.%http://dx.doi.org/10.1371/journal.pone. 0052031   
-To address the full spectrum of amino acids at a given position, oligonucleotides carrying degeneracy codons~\cite{pal_methods_2005} are often used. Particularly popular is the use of NNK and NNS degeneracies, which have long been used in biochemistry~\cite{scott_searching_1990,barbas_semisynthetic_1992}. Here, S denotes either Guanine or Cytosine and K denotes either Guanine or Thymine in the third position of the codon. Either of these codes only allow 32 of all 64 possible codons to be formed, they do cover all 20 possible amino acids, but avoid two of the three possible stop codons (opal and ochre). A more recent development is the use of custom oligonucleotide arrays covering all possible (or desired) options of codon changes~\cite{kitzman_massively_2015} explicitly rather than relying on degeneracy. While this option allows for the precise control of desired mutations, it is currently too expensive to be applicable for more than a handful of genes at a time.
+Another set of methods often employed are scaled up site-directed mutagenesis approaches~\cite{seyfang_multiple_2004,firnberg_pfunkel:_2012}; with one popular example being Kunkel mutagenesis~\cite{kunkel_rapid_1985}. It uses a special strain of \species{E.~coli} that has been modified to produce high levels of uridine and lacks the ability to excise these bases from DNA. A phage vector carrying the desired template sequence is transfected into the cells resulting in its replication with a high uracil incorporation rate. The thus uracilated template can be PCR amplified with primers containing the mutations of interest and subsequently amplified in regular \species{E.~coli} which will degrade the uracilated template, thus enriching the mutant copies. A number of derivatives of Kunkel mutagenesis have since been developed to bring its output to a scale supporting saturated libraries, most notably Pfunkel~\cite{firnberg_pfunkel:_2012}.
+To address the full spectrum of amino acids at a given position, oligonucleotides carrying degeneracy codons~\cite{pal_methods_2005} are often used. Particularly popular is the use of \texttt{NNK} and \texttt{NNS} degeneracies, which have long been used in biochemistry~\cite{scott_searching_1990,barbas_semisynthetic_1992}. Here, S denotes either Guanine or Cytosine and K denotes either Guanine or Thymine in the third position of the codon. Either of these codes only allow 32 of all 64 possible codons to be formed, they do cover all 20 possible amino acids, but avoid two of the three possible stop codons (opal and ochre). A more recent development is the use of custom oligonucleotide arrays covering all possible (or desired) options of codon changes~\cite{kitzman_massively_2015} explicitly rather than relying on degeneracy. While this option allows for the precise control of desired mutations, it is currently too expensive to be applicable for more than a handful of genes at a time.
 
 Another saturation mutagenesis method often applied in Deep Mutational Scanning is EMPIRIC (``Extremely Methodical and Parallel Investigation of Randomized Individual Codons'')~\cite{hietpas_experimental_2011}. %http://www.pnas.org/content/108/19/7896.long
 In this method, rather than using PCR amplification amplification, oligo cassettes carrying the variants of interested are directly ligated at the appropriate positions. This is achieved by designing the underlying vector to omit the cassette sequence. Instead it carries a restriction site at the equivalent position, which can be cut to create sticky ends. Pairs of oligos carrying the variants of interest can be synthesized such that they can assemble into a fitting cassette that integrates with the vector.
+EMPIRIC is one example of a mutagenesis method that was explicitly developed to be used in Deep Mutational Scanning. Another example is PALS~\cite{kitzmann_massively_2015}, which aims to limit the number of amino acid changes per library clone to only a single one. \todo{look up details}.
 
 Finally, complete variant libraries are also becoming commercially available via gene synthesis~\cite{kosuri_scalable_2010}. While this method is certainly the most convenient, it is by far the most expensive option. 
 
@@ -107,54 +108,53 @@ Finally, complete variant libraries are also becoming commercially available via
 
 \paragraph{Selection approaches:} The next step of a DMS procedure is the selection of mutants that pass a given assay. The assays previously employed in DMS studies can be sorted into three broad categories: (i) \textit{In~vitro} display methods (such as Phage Display or Ribodisplay); (ii) competition-based methods that couple a protein property under investigation (such as molecular interactions, toxicity, or overall functionality) to host fitness; and (iii) Cell sorting based on fluorescence labeled reporters.
 
-Phage display~\todo{cite} and ribodisplay~\todo{cite} couple the genetic information encoding a given variant to the physical protein itself and select according to the protein's ability to bind to a fixed interactor. Variants that are unable to bind are washed away and thus depleted. This can be done in multiple rounds, as the associated genetic information can be replicated again after selection (via viral propagation in bacteria for phage display or via PCR in ribodisplay). Fowler and colleagues employed phage display in their seminal DMS study with respect to the binding of the YAP65-WW domain to its cognate peptide sequence~\cite{fowler_high-resolution_2010}. However, since display methods are only feasible for small proteins or fragments thereof, more recent studies have employed more scalable methods.
+Phage display~\cite{smith_filamentous_1985} and ribodisplay~\todo{cite} couple the genetic information encoding a given variant to the physical protein itself and select according to the protein's ability to bind to a fixed interactor. Variants that are unable to bind are washed away and thus depleted. This can be done in multiple rounds, as the associated genetic information can be replicated again after selection (via viral propagation in bacteria for phage display or via PCR in ribodisplay). Fowler and colleagues employed phage display in their seminal DMS study with respect to the binding of the YAP65-WW domain to its cognate peptide sequence~\cite{fowler_high-resolution_2010}. However, since display methods are only feasible for small proteins or fragments thereof, more recent studies have employed more scalable methods.
 
 The most frequently applied selection mechanisms are fitness based. In these cases a particular property of the variant protein is coupled to its host cell's ability to thrive in competitive growth. Yeast-2-Hybrid and functional complementation (as introduced in section~\ref{complY2HIntro}) are two examples of such methods. While Y2H couples fitness to the ability of the protein to maintain a specific protein-protein interaction, complementation does so for the proteins overall ability to perform its biological role. A popular condition-dependent extension to complementation is selection according to drug resistance~\cite{wu_systematic_2013,wagenaar_resistance_2014}. But other fitness-based selection methods have been used in DMS as well. For example, Adkar and colleagues used the toxicity of CCDB in \species{E.~coli}~\cite{adkar_protein_2012}, while Kim and colleagues select according to degron activity by fusing the degron to an auxotrophic marker~\cite{kim_high-throughput_2013}. Finally, a number of DMS studies have been performed on viral genes, by selecting for virus propagation efficiency~\cite{bloom_2014,thyagarajan_inherent_2014}.
 
 Finally, another selection mechanism is the use of fluorescence-activated cell sorting (FACS). Here surface markers whose presence scale with the activity of the studied protein are targeted with fluorescently labeled antibodies, such that cells can be sorted accordingly~\cite{schlinkmann_critical_2012,majithia_2016}.
 
 
-\paragraph{Sequencing strategies:} The following step in a DMS experiment is sequencing. In many cases this is simply done by deep shotgun sequencing of the library. A problem with approach however is that each read must be considered by itself, making it difficult to distinguish real mutations from sequencing error. 
+\paragraph{Sequencing strategies:} The following step in a DMS experiment is sequencing. In many cases this is simply done by deep shotgun sequencing of the library~\cite{ernst_coevolution_2010,hietpas_experimental_2011,fujino_robust_2012}. A problem with approach however is that each read must be considered by itself, making it difficult to distinguish real mutations from sequencing error. To address this problems, a number of approaches have emerged. In cases where the amplicon is short enough, paired-end sequencing can be exploited to use information for variant calling. In the simplest case this is achieved by requiring both reads to agree on the base call in question, as in the case of ?~\cite{?}. A less stringent alternative as used by Fowler and colleagues~\cite{fowler_high-resolution_2010} is to perform Bayesian inference on the quality scores associated with the base calls in each read pair. This way a variant may still be identified if one read's wildtype call was made with low confidence. 
+
+Where the length of the nucleotide sequence in question exceeds the read length capabilities of short-read sequencing technologies, other strategies are required. A notable edge case can be found in Olson~\etal~2014?~\cite{olson_comprehensive_2014} where only a partial overlap between read pairs was achieved and variant calls outside of the overlap region were of lower quality. Other studies resort to more involved approaches. A popular paradigm is the association of molecular barcodes with each clone within the DMS library. While this simplifies the readout of the experiment (as only the barcodes need to be sequenced and counted), it adds the requirement of identifying which barcode belongs to which genotype. In most cases this is addressed using ``subassembly''~\cite{hiatt_parallel_2010}, a high-throughput amplicon sequencing approach based on tagmentation~\cite{tagmentation} with random tags. \todo{Double-check that this is right.} 
+A similar method, called EMPIRIC-BC is also used by Mavor and colleagues~\cite{mavor_determination_2016}, where the amplicon in question was short enough not to require subassembly.
+
+An alternative approach to covering longer stretches of DNA is to subdivide them into smaller regions that can be sequenced separately from each other. For example, Doud and colleagues~\cite{doud_accurate_2016} amplify each region with primers carrying random tags. This way multiple reads including the same tag are highly likely to refer to the same molecule and can be used to make accurate variant calls. While this approach has the advantage of being less labour-intensive than barcoding each individual clone in the DMS library, it can only detect variants co-occurring within the same region of the sequence. Thus the library must be designed in such a way that either only a single mutation occurs within each clone or that it is large enough that effects of many variant co-occurrences are averaged out.
+
+\paragraph{Computational analysis:} 
 
 
-When considering these studies in the context of VUS classification, a number issues become apparent. Many of these have primarily used DMS in the context of biochemistry. The assays underlying different DMS studies are quite diverse and measure different aspects of a protein’s behaviour. As a consequence, they cannot be easily compared with each other. In addition, the achieved coverage of possible amino acid changes varies from map to map. Finally, many maps to do not control the quality of measurements. Therefore, the confidence levels underlying different parts of these maps are often unknown. A generalized framework that would allow for the construction of comparable, high-quality maps representing overall protein function would be of great utility.
+\paragraph{Conclusion:} When considering previous DMS studies in the context of VUS classification, a number issues become apparent. Many of these have primarily used DMS in the context of biochemistry. The assays underlying different DMS studies are quite diverse and measure different aspects of a protein’s behaviour. As a consequence, they cannot be easily compared with each other. In addition, the achieved coverage of possible amino acid changes varies from map to map. Finally, many maps to do not control the quality of measurements. Therefore, the confidence levels underlying different parts of these maps are often unknown. A generalized framework that would allow for the construction of comparable, high-quality maps representing overall protein function would be of great utility.
 
 % \section{Edgotyping}
 
 \section{Background: The Sumoylation Pathway}
 \label{intro:sumoylation}
 
-In the following chapters, we will evaluate the performance of Deep Mutational Scanning with respect to its ability to detect effects not only on overall function but individual subfunction. Beyond the amenability of the proteins to the employed assays, an ideal testing ground would be comprised of a biological system that is both mechanistically complex and has been well studied previously in terms of structure and mechanism. The Sumoylation life cycle does not only fulfill these criteria, but is also of great biological importance. Sumoylation is a protein modification in which a small ubiquitin-like modifier (SUMO) is covalently attached to target proteins in order to modulate their behavior, especially in terms of localization and physical interactions~\cite{sumoylation}. Sumoylation plays an important role in a large number of cellular processes. It is therefore not surprising that the core members of the pathway are essential genes~\todo{REF}.
+In the following chapters, we will evaluate the performance of Deep Mutational Scanning with respect to its ability to detect effects not only on overall function but individual subfunction. Beyond the amenability of the proteins to the employed assays, an ideal testing ground would be comprised of a biological system that is both mechanistically complex and has been well studied previously in terms of structure and mechanism. The Sumoylation life cycle does not only fulfill these criteria, but is also of great biological importance. Sumoylation is a protein modification in which a small ubiquitin-like modifier (SUMO) is covalently attached to target proteins in order to modulate their behavior, especially in terms of localization and physical interactions~\todo{REF}. Sumoylation plays an important role in a large number of cellular processes. It is therefore not surprising that the core members of the pathway are essential genes~\todo{REF}.
 
 \begin{figure}
 	\centering
 	\includegraphics[width=\textwidth]{img/sumoylation_steps.pdf}
-	\caption{Steps in the sumoylation cascade. SENP protease matures a SUMO precursor by cleaving off its four C-terminal residues. In the activation step, the E1 complex forms a thioester bond  between SUMO and one of its cysteine residues under ATP consumption. It then transestereficates SUMO to the E2. The E2 recognizes potential targets via their $\Psi$KXE motif. With the help of an E3, SUMO is then ligated to the central lysine within that motif. SENP proteases can reverse the process by hydrolysing this new peptide bond. Images are based on the following PDB structures: \texttt{2G4D}~\cite{Xu2006}, \texttt{3KYC}~\cite{Olsen2010}, \texttt{4W5V}~\cite{ReiterEtAl}, \texttt{3UIP}~\cite{Gareau2012}}
+	\caption{Steps in the sumoylation cascade. SENP protease matures a SUMO precursor by cleaving off its four C-terminal residues. In the activation step, the E1 complex forms a thioester bond  between SUMO and one of its cysteine residues under ATP consumption. It then transestereficates SUMO to the E2. The E2 recognizes potential targets via their $\Psi$KXE motif. With the help of an E3, SUMO is then ligated to the central lysine within that motif. SENP proteases can reverse the process by hydrolysing this new peptide bond. Images were generated usingn data from the following PDB structures: \texttt{2G4D}~\cite{xu_crystal_2006}, \texttt{3KYC}~\cite{olsen_active_2010}, \texttt{4W5V}~\cite{reiter_characterization_2016}, \texttt{3UIP}~\cite{gareau_determinants_2012}}
 	\label{fig:sumoylation_steps}
 \end{figure}
 
-Despite employing a distinct set of proteins compared to the ubiquitination machinery, the sumoylation pathway bears many close similarities. Analogously to ubiquitin, an enzymatic cascade of proteases, E1, E2 and E3s guide SUMO through its maturation, activation, conjugation and ligation phase~\cite{sumoylation} (Figure \ref{fig:sumoylation_steps}). After expression, SUMO is matured through cleavage of four amino acids from its C-terminus, exposing a diglycine motif. In humans, this process is performed by two proteases, SENP1 and SENP2. Next, an E1 activation complex (UBA2-SAE1) forms a thioester bond between the SUMO C-terminal diglycine and a cysteine residue within the E1 protein under the consumption of ATP. An E2 conjugase (UBE2I) binds to the complex, so that the activated SUMO can be transfered to one of its own cysteine residues via transesterification. 
+Despite employing a distinct set of proteins compared to the ubiquitination machinery, the sumoylation pathway bears many close similarities. Analogously to ubiquitin, an enzymatic cascade of proteases, E1, E2 and E3s guide SUMO through its maturation, activation, conjugation and ligation phase~\todo{REF} (Figure \ref{fig:sumoylation_steps}). After expression, SUMO is matured through cleavage of four amino acids from its C-terminus, exposing a diglycine motif. In humans, this process is performed by two proteases, SENP1 and SENP2. Next, an E1 activation complex (UBA2-SAE1) forms a thioester bond between the SUMO C-terminal diglycine and a cysteine residue within the E1 protein under the consumption of ATP. An E2 conjugase (UBE2I) binds to the complex, so that the activated SUMO can be transfered to one of its own cysteine residues via transesterification. 
 
-The thus loaded E2 can recognize potential target proteins via an exposed motif of four amino acids. The motif is generally described as $\Psi$KxD/E, i.e. a large hydrophobic residue, followed by a lysine, a spacer residue and an acidic residue~\cite{Sampson2001}. The motif is often found in an extended loop extending from the protein or in a disordered region~\todo{REF}. The central lysine within the motif enters the E2’s active site where it comes into contact with the SUMO diglycine. There, a peptide bond is formed between the lysine $\varepsilon$-amino group and the SUMO C-terminus~\cite{BernierVillamor2002}. This process can be made more efficient in the presence E3 proteins. It is interesting to note, that while only a single SUMO E2 conjugase (UBE2I) is encoded by the human genome, there is a variety of different SUMO E3 ligases. Some work by simply stabilizing the SUMO-E2 complex, while others can outright force-feed non-canonical targets to the E2~\cite{Streich2016}. 
+The thus loaded E2 can recognize potential target proteins via an exposed motif of four amino acids. The motif is generally described as $\Psi$KxD/E, i.e. a large hydrophobic residue, followed by a lysine, a spacer residue and an acidic residue~\cite{sampson_small_2001}. The motif is often found in an extended loop extending from the protein or in a disordered region~\todo{REF}. The central lysine within the motif enters the E2’s active site where it comes into contact with the SUMO diglycine. There, a peptide bond is formed between the lysine $\varepsilon$-amino group and the SUMO C-terminus~\cite{bernier-villamor_structural_2002}. This process can be made more efficient in the presence E3 proteins. It is interesting to note, that while only a single SUMO E2 conjugase (UBE2I) is encoded by the human genome, there is a variety of different SUMO E3 ligases. Some work by simply stabilizing the SUMO-E2 complex, while others can outright force-feed non-canonical targets to the E2~\cite{streich_jr_capturing_2016}. 
 
 \begin{figure}[h!]
 	\centering
 	\includegraphics[width=\textwidth]{img/sumo_chaining.pdf}
-	\caption{Steps in SUMO chain formation as proposed by Alontaga and colleagues~\cite{Alontaga2015}. An E2 noncovalently interacts with a SUMO modification of a target protein. A second E2 carrying a covalently bound second SUMO binds the first E2-SUMO complex, allowing for the first SUMO's N-terminal tail to enter the active site, where a lysine within the tail is forms a peptide bond with the second SUMO's C-terminus. Finally, the complex dissociates, leaving behind the newly formed SUMO chain. Images are based on the following PDB structures: \texttt{3UIP}~\cite{Gareau2012}, \texttt{4Y1L}~\cite{Alontaga2015}}
+	\caption{Steps in SUMO chain formation as proposed by Alontaga and colleagues~\cite{alontaga_rwd_2015}. An E2 noncovalently interacts with a SUMO modification of a target protein. A second E2 carrying a covalently bound second SUMO binds the first E2-SUMO complex, allowing for the first SUMO's N-terminal tail to enter the active site, where a lysine within the tail is forms a peptide bond with the second SUMO's C-terminus. Finally, the complex dissociates, leaving behind the newly formed SUMO chain. Images were generated using data from the following PDB structures: \texttt{3UIP}~\cite{gareau_determinants_2012}, \texttt{4Y1L}~\cite{}}
 	\label{fig:sumo_chaining}
 \end{figure}
 
-Like ubiquitin, SUMO can also form chains (Figure \ref{fig:sumo_chaining}). However, of the four SUMO proteins encoded by the human genome, only SUMO2 and SUMO3 are capable of doing so, as they contain a suitable lysine residue within a disordered N-terminal tail\todo{REF}. Capili and Lima previously observed that the E2 (UBE2I) and SUMO can interact in a noncovalent manner via a distinct binding interface~\cite{CapiliLima2007}. According to a model proposed by Alontaga and colleagues~\cite{Alontaga2015} this interaction is a key mechanism in SUMO chain formation. The interaction recruits a second, SUMO-loaded E2 that interacts with the complex in such a manner that the lysine within the first SUMO's N-terminal tail can find its way into the active site of the second E2, where the second SUMO is concatenated.
+Like ubiquitin, SUMO can also form chains (Figure \ref{fig:sumo_chaining}). However, of the four SUMO proteins encoded by the human genome, only SUMO2 and SUMO3 are capable of doing so, as they contain a suitable lysine residue within a disordered N-terminal tail\todo{REF}. Capili and Lima previously observed that the E2 (UBE2I) and SUMO can interact in a noncovalent manner via a distinct binding interface~\cite{capili_structure_2007}. According to a model proposed by Alontaga and colleagues~\cite{alontaga_rwd_2015} this interaction is a key mechanism in SUMO chain formation. The interaction recruits a second, SUMO-loaded E2 that interacts with the complex in such a manner that the lysine within the first SUMO's N-terminal tail can find its way into the active site of the second E2, where the second SUMO is concatenated.
 
 
 
 Given the complexity of the Sumoylation system, especially surrounding the E2 component, an examination of sequence-structure-function relationships becomes a multifaceted problem. Mutations could in principle affect any combination of the multiple interaction interfaces which in turn contribute in complex ways to the overall cellular phenotype.
-An alanine scan of the yeast SUMO E2 Ubc9 was previously performed and succeeded in identifying functionally important sites within the protein 20. Similarly, a DMS scan of ubiquitin, was previously completed 21. While both of these projects provided great insight into the biochemistry of ubiquitin-like protein pathways, neither has produced a complete map.
-%Sampson2001: The small ubiquitin-like modifier-1 (SUMO-1) consensus sequence mediates Ubc9 binding and is essential for SUMO-1 modification. 
-%BernierVillamor2002: Structural basis for E2-mediated SUMO conjugation revealed by a complex between ubiquitin-conjugating enzyme Ubc9 and RanGAP1.
-%Streich2016: Capturing a substrate in an activated RING E3/E2–SUMO complex
-%CapiliLima2007: Structure and analysis of a complex between SUMO and Ubc9 illustrates features of a conserved E2-Ubl interaction
-%Alontaga2015: RWD Domain as an E2 (Ubc9)-Interaction Module
-%Xu2006: http://www.biochemj.org/content/398/3/345
-%Olsen et al. 2010 (Lima Lab) Active site remodelling accompanies thioster bond formation in the SUMO E1
-%Katherine H. Reiter‡, Anita Ramachandran‡, Xue Xia‡, Lauren E. Boucher‡,§, Jürgen Bosch‡,§ and Michael J. Matunis‡1Characterization and Structural Insights into Selective E1-E2 Interactions in the Human and Plasmodium falciparum SUMO Conjugation Systems.
+An alanine scan of the yeast SUMO E2 Ubc9 was previously performed and succeeded in identifying functionally important sites within the protein~\cite{20}. Similarly, a DMS scan of ubiquitin, was previously completed~\cite{21}. While both of these projects provided great insight into the biochemistry of ubiquitin-like protein pathways, neither has produced a complete map.
