--- a/thesis.bib
+++ b/thesis.bib
@@ -984,25 +984,6 @@ DOI: 10.1201/9780849359125.ch3},
 	file = {Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/JH3PCZAI/abstract.html:text/html}
 }
 
-@article{olsen_active_2010,
-	title = {Active site remodelling accompanies thioester bond formation in the {SUMO} {E}1},
-	volume = {463},
-	copyright = {© 2010 Nature Publishing Group},
-	issn = {0028-0836},
-	url = {http://www.nature.com/nature/journal/v463/n7283/abs/nature08765.html},
-	doi = {10.1038/nature08765},
-	abstract = {E1 enzymes activate ubiquitin (Ub) and ubiquitin-like (Ubl) proteins in two steps by carboxy-terminal adenylation and thioester bond formation to a conserved catalytic cysteine in the E1 Cys domain. The structural basis for these intermediates remains unknown. Here we report crystal structures for human SUMO E1 in complex with SUMO adenylate and tetrahedral intermediate analogues at 2.45 and 2.6 Å, respectively. These structures show that side chain contacts to ATP·Mg are released after adenylation to facilitate a 130 degree rotation of the Cys domain during thioester bond formation that is accompanied by remodelling of key structural elements including the helix that contains the E1 catalytic cysteine, the crossover and re-entry loops, and refolding of two helices that are required for adenylation. These changes displace side chains required for adenylation with side chains required for thioester bond formation. Mutational and biochemical analyses indicate these mechanisms are conserved in other E1s.},
-	language = {en},
-	number = {7283},
-	urldate = {2017-02-05},
-	journal = {Nature},
-	author = {Olsen, Shaun K. and Capili, Allan D. and Lu, Xuequan and Tan, Derek S. and Lima, Christopher D.},
-	month = feb,
-	year = {2010},
-	pages = {906--912},
-	file = {Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/2RCVDVXT/nature08765.html:text/html}
-}
-
 @article{knipscheer_noncovalent_2007,
 	title = {Noncovalent interaction between {Ubc}9 and {SUMO} promotes {SUMO} chain formation},
 	volume = {26},
@@ -1932,4 +1913,157 @@ A technique for developing specific and potent enzyme inhibitors is validated on
 	pmid = {21464309},
 	pages = {7896--7901},
 	file = {Full Text PDF:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/N6SEVIHB/Hietpas et al. - 2011 - Experimental illumination of a fitness landscape.pdf:application/pdf;Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/7969GPBP/7896.html:text/html}
+}
+
+@article{hiatt_parallel_2010,
+	title = {Parallel, tag-directed assembly of locally derived short sequence reads},
+	volume = {7},
+	copyright = {© 2010 Nature Publishing Group},
+	issn = {1548-7091},
+	url = {http://www.nature.com/nmeth/journal/v7/n2/abs/nmeth.1416.html},
+	doi = {10.1038/nmeth.1416},
+	abstract = {We demonstrate subassembly, an in vitro library construction method that extends the utility of short-read sequencing platforms to applications requiring long, accurate reads. A long DNA fragment library is converted to a population of nested sublibraries, and a tag sequence directs grouping of short reads derived from the same long fragment, enabling localized assembly of long fragment sequences. Subassembly may facilitate accurate de novo genome assembly and metagenome sequencing.},
+	language = {en},
+	number = {2},
+	urldate = {2017-02-28},
+	journal = {Nature Methods},
+	author = {Hiatt, Joseph B. and Patwardhan, Rupali P. and Turner, Emily H. and Lee, Choli and Shendure, Jay},
+	month = feb,
+	year = {2010},
+	pages = {119--122},
+	file = {Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/9TA3D3V3/nmeth.1416.html:text/html}
+}
+
+@article{smith_filamentous_1985,
+	title = {Filamentous fusion phage: novel expression vectors that display cloned antigens on the virion surface},
+	volume = {228},
+	issn = {0036-8075},
+	shorttitle = {Filamentous fusion phage},
+	abstract = {Foreign DNA fragments can be inserted into filamentous phage gene III to create a fusion protein with the foreign sequence in the middle. The fusion protein is incorporated into the virion, which retains infectivity and displays the foreign amino acids in immunologically accessible form. These "fusion phage" can be enriched more than 1000-fold over ordinary phage by affinity for antibody directed against the foreign sequence. Fusion phage may provide a simple way of cloning a gene when an antibody against the product of that gene is available.},
+	language = {eng},
+	number = {4705},
+	journal = {Science (New York, N.Y.)},
+	author = {Smith, G. P.},
+	month = jun,
+	year = {1985},
+	pmid = {4001944},
+	keywords = {Antibodies, Viral, Antigens, Surface, Antigens, Viral, Cloning, Molecular, Coliphages, Genetic Vectors, viral proteins, Virion},
+	pages = {1315--1317}
+}
+
+@article{sampson_small_2001,
+	title = {The {Small} {Ubiquitin}-like {Modifier}-1 ({SUMO}-1) {Consensus} {Sequence} {Mediates} {Ubc}9 {Binding} and {Is} {Essential} for {SUMO}-1 {Modification}},
+	volume = {276},
+	issn = {0021-9258, 1083-351X},
+	url = {http://www.jbc.org/content/276/24/21664},
+	doi = {10.1074/jbc.M100006200},
+	abstract = {SUMO-1 is an ubiquitin-related protein that is covalently conjugated to a diverse assortment of proteins. The consequences of SUMO-1 modification include the regulation of protein-protein interactions, protein-DNA interactions, and protein subcellular localization. At present, very little is understood about the specific mechanisms that govern the recognition of proteins as substrates for SUMO-1 modification. However, many of the proteins that are modified by SUMO-1 interact directly with the SUMO-1 conjugating enzyme, Ubc9. These interactions suggest that Ubc9 binding may play an important role in substrate recognition as well as in substrate modification. The SUMO-1 consensus sequence (SUMO-1-CS) is a motif of conserved residues surrounding the modified lysine residue of most SUMO-1 substrates. This motif conforms to the sequence “ΨKXE,” where Ψ is a large hydrophobic residue, K is the lysine to which SUMO-1 is conjugated, X is any amino acid, and E is glutamic acid. In this study, we demonstrate that the SUMO-1-CS is a major determinant of Ubc9 binding and SUMO-1 modification. Mutating residues in the SUMO-1-CS abolishes both Ubc9 binding and substrate modification. These findings have important implications for how SUMO-1 substrates are recognized and for how SUMO-1 is ultimately transferred to specific lysine residues on these substrates.},
+	language = {en},
+	number = {24},
+	urldate = {2017-02-28},
+	journal = {Journal of Biological Chemistry},
+	author = {Sampson, Deborah A. and Wang, Min and Matunis, Michael J.},
+	month = jun,
+	year = {2001},
+	pmid = {11259410},
+	pages = {21664--21669},
+	file = {Full Text PDF:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/7FPHFQUN/Sampson et al. - 2001 - The Small Ubiquitin-like Modifier-1 (SUMO-1) Conse.pdf:application/pdf;Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/DPPF3NEK/21664.html:text/html}
+}
+
+@article{xu_crystal_2006,
+	title = {Crystal structure of the {SENP}1 mutant {C}603S–{SUMO} complex reveals the hydrolytic mechanism of {SUMO}-specific protease},
+	volume = {398},
+	copyright = {The Biochemical Society, London},
+	issn = {0264-6021, 1470-8728},
+	url = {http://www.biochemj.org/content/398/3/345},
+	doi = {10.1042/BJ20060526},
+	abstract = {SUMO (small ubiquitin-related modifier)-specific proteases catalyse the maturation and de-conjugation processes of the sumoylation pathway and modulate various cellular responses including nuclear metabolism and cell cycle progression. The active-site cysteine residue is conserved among all known SUMO-specific proteases and is not substitutable by serine in the hydrolysis reactions demonstrated previously in yeast. We report here that the catalytic domain of human protease SENP1 (SUMO-specific protease 1) mutant SENP1CC603S carrying a mutation of cysteine to serine at the active site is inactive in maturation and de-conjugation reactions. To further understand the hydrolytic mechanism catalysed by SENP1, we have determined, at 2.8 Å resolution (1 Å=0.1 nm), the X-ray structure of SENP1CC603S–SUMO-1 complex. A comparison of the structure of SENP2–SUMO-1 suggests strongly that SUMO-specific proteases require a self-conformational change prior to cleavage of peptide or isopeptide bond in the maturation and de-conjugation processes respectively. Moreover, analysis of the interface of SENP1 and SUMO-1 has led to the identification of four unique amino acids in SENP1 that facilitate the binding of SUMO-1. By means of an in vitro assay, we further demonstrate a novel function of SENP1 in hydrolysing the thioester linkage in E1-SUMO and E2-SUMO complexes. The results disclose a new mechanism of regulation of the sumoylation pathway by the SUMO-specific proteases.},
+	language = {en},
+	number = {3},
+	urldate = {2017-02-28},
+	journal = {Biochemical Journal},
+	author = {Xu, Zheng and Chau, So Fun and Lam, Kwok Ho and Chan, Ho Yin and Ng, Tzi Bun and Au, Shannon W. N.},
+	month = sep,
+	year = {2006},
+	pmid = {16712526},
+	pages = {345--352},
+	file = {Full Text PDF:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/KKFBPRWC/Xu et al. - 2006 - Crystal structure of the SENP1 mutant C603S–SUMO c.pdf:application/pdf;Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/RKEZCDGH/345.html:text/html}
+}
+
+@article{olsen_active_2010,
+	title = {Active site remodelling accompanies thioester bond formation in the {SUMO} {E}1},
+	volume = {463},
+	copyright = {© 2010 Nature Publishing Group},
+	issn = {0028-0836},
+	url = {http://www.nature.com/nature/journal/v463/n7283/abs/nature08765.html},
+	doi = {10.1038/nature08765},
+	abstract = {E1 enzymes activate ubiquitin (Ub) and ubiquitin-like (Ubl) proteins in two steps by carboxy-terminal adenylation and thioester bond formation to a conserved catalytic cysteine in the E1 Cys domain. The structural basis for these intermediates remains unknown. Here we report crystal structures for human SUMO E1 in complex with SUMO adenylate and tetrahedral intermediate analogues at 2.45 and 2.6 Å, respectively. These structures show that side chain contacts to ATP·Mg are released after adenylation to facilitate a 130 degree rotation of the Cys domain during thioester bond formation that is accompanied by remodelling of key structural elements including the helix that contains the E1 catalytic cysteine, the crossover and re-entry loops, and refolding of two helices that are required for adenylation. These changes displace side chains required for adenylation with side chains required for thioester bond formation. Mutational and biochemical analyses indicate these mechanisms are conserved in other E1s.},
+	language = {en},
+	number = {7283},
+	urldate = {2017-02-28},
+	journal = {Nature},
+	author = {Olsen, Shaun K. and Capili, Allan D. and Lu, Xuequan and Tan, Derek S. and Lima, Christopher D.},
+	month = feb,
+	year = {2010},
+	pages = {906--912},
+	file = {Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/MPQX7KIU/nature08765.html:text/html}
+}
+
+@article{reiter_characterization_2016,
+	title = {Characterization and {Structural} {Insights} into {Selective} {E}1-{E}2 {Interactions} in the {Human} and {Plasmodium} falciparum {SUMO} {Conjugation} {Systems}},
+	volume = {291},
+	issn = {0021-9258, 1083-351X},
+	url = {http://www.jbc.org/content/291/8/3860},
+	doi = {10.1074/jbc.M115.680801},
+	abstract = {Protein modification by small ubiquitin-related modifiers (SUMOs) is essential and conserved in the malaria parasite, Plasmodium falciparum. We have previously shown that interactions between the SUMO E1-activating and E2-conjugating enzyme in P. falciparum are distinct compared with human, suggesting a potential target for development of parasite-specific inhibitors of SUMOylation. The parasite asexual trophozoite stage is susceptible to iron-induced oxidative stress and is subsequently a target for many of the current anti-malarial drugs. Here, we provide evidence that SUMOylation plays a role in the parasite response to oxidative stress during red blood cell stages, indicative of a protective role seen in other organisms. Using x-ray crystallography, we solved the structure of the human SUMO E1 ubiquitin fold domain in complex with the E2, Ubc9. The interface defined in this structure guided in silico modeling, mutagenesis, and in vitro biochemical studies of the P. falciparum SUMO E1 and E2 enzymes, resulting in the identification of surface residues that explain species-specific interactions. Our findings suggest that parasite-specific inhibitors of SUMOylation could be developed and used in combination therapies with drugs that induce oxidative stress.},
+	language = {en},
+	number = {8},
+	urldate = {2017-02-28},
+	journal = {Journal of Biological Chemistry},
+	author = {Reiter, Katherine H. and Ramachandran, Anita and Xia, Xue and Boucher, Lauren E. and Bosch, Jürgen and Matunis, Michael J.},
+	month = feb,
+	year = {2016},
+	pmid = {26697886},
+	keywords = {crystallography, malaria, oxidative stress, plasmodium, small ubiquitin-like modifier (SUMO), ubiquitin-conjugating enzyme (E2 enzyme), ubiquitin fold domain (Ufd)},
+	pages = {3860--3870},
+	file = {Full Text PDF:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/73W5P5CX/Reiter et al. - 2016 - Characterization and Structural Insights into Sele.pdf:application/pdf;Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/QSUBWNC2/3860.html:text/html}
+}
+
+@article{streich_jr_capturing_2016,
+	title = {Capturing a substrate in an activated {RING} {E}3/{E}2–{SUMO} complex},
+	volume = {536},
+	copyright = {© 2016 Macmillan Publishers Limited, part of Springer Nature. All rights reserved.},
+	issn = {0028-0836},
+	url = {http://www.nature.com/nature/journal/v536/n7616/abs/nature19071.html},
+	doi = {10.1038/nature19071},
+	abstract = {Post-translational protein modification by ubiquitin (Ub) and ubiquitin-like (Ubl) proteins such as small ubiquitin-like modifier (SUMO) regulates processes including protein homeostasis, the DNA damage response, and the cell cycle. Proliferating cell nuclear antigen (PCNA) is modified by Ub or poly-Ub at lysine (Lys)164 after DNA damage to recruit repair factors. Yeast PCNA is modified by SUMO on Lys164 and Lys127 during S-phase to recruit the anti-recombinogenic helicase Srs2. Lys164 modification requires specialized E2/E3 enzyme pairs for SUMO or Ub conjugation. For SUMO, Lys164 modification is strictly dependent on the E3 ligase Siz1, suggesting the E3 alters E2 specificity to promote Lys164 modification. The structural basis for substrate interactions in activated E3/E2–Ub/Ubl complexes remains unclear. Here we report an engineered E2 protein and cross-linking strategies that trap an E3/E2–Ubl/substrate complex for structure determination, illustrating how an E3 can bypass E2 specificity to force-feed a substrate lysine into the E2 active site.
+View full text},
+	language = {en},
+	number = {7616},
+	urldate = {2017-02-28},
+	journal = {Nature},
+	author = {Streich Jr, Frederick C. and Lima, Christopher D.},
+	month = aug,
+	year = {2016},
+	keywords = {DNA damage and repair, Enzyme mechanisms, Ubiquitins, X-ray Crystallography},
+	pages = {304--308},
+	file = {Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/EN2MP7KN/nature19071.html:text/html}
+}
+
+@article{capili_structure_2007,
+	title = {Structure and {Analysis} of a {Complex} between {SUMO} and {Ubc}9 {Illustrates} {Features} of a {Conserved} {E}2-{Ubl} {Interaction}},
+	volume = {369},
+	issn = {0022-2836},
+	url = {http://www.sciencedirect.com/science/article/pii/S0022283607004603},
+	doi = {10.1016/j.jmb.2007.04.006},
+	abstract = {The SUMO E2 Ubc9 serves as a lynchpin in the SUMO conjugation pathway, interacting with the SUMO E1 during activation, with thioester linked SUMO after E1 transfer and with the substrate and SUMO E3 ligases during conjugation. Here, we describe the structure determination of a non-covalent complex between human Ubc9 and SUMO-1 at 2.4 Å resolution. Non-covalent interactions between Ubc9 and SUMO are conserved in human and yeast insomuch as human Ubc9 interacts with each of the human SUMO isoforms, and yeast Ubc9 interacts with Smt3, the yeast SUMO ortholog. Structural comparisons reveal similarities to several other non-covalent complexes in the ubiquitin pathway, suggesting that the non-covalent Ubc9–SUMO interface may be important for poly-SUMO chain formation, for E2 recruitment to SUMO conjugated substrates, or for mediating E2 interactions with either E1 or E3 ligases. Biochemical analysis suggests that this surface is less important for E1 activation or di-SUMO-2 formation, but more important for E3 interactions and for poly-SUMO chain formation when the chain exceeds more than two SUMO proteins.},
+	number = {3},
+	urldate = {2017-02-28},
+	journal = {Journal of Molecular Biology},
+	author = {Capili, Allan D. and Lima, Christopher D.},
+	month = jun,
+	year = {2007},
+	keywords = {Smt3, SUMO, Ubc9, ubiquitin-like, X-ray structure},
+	pages = {608--618},
+	file = {ScienceDirect Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/66QSZKJD/S0022283607004603.html:text/html}
 }
